--- a/estilos.css
+++ b/estilos.css
@@ -1,27 +1,42 @@
-* {
+html * {
     margin: 0;
     padding: 0;
-
 }
+
+body {
+    width: 100vw;
+}
+
 .btnmembers {
     background-color: rgb(199, 236, 226);
 }
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
 /*--------------Menu--------------*/
 nav {
     position: sticky;
     top: 0;
     z-index: 999999;
 }
-.navbar-brand{
-  padding-top: 8px;
+
+.navbar-brand {
+    padding-top: 8px;
+    margin-left: 40px;
 }
+
 .topnav {
     overflow: hidden;
     background-color: rgba(255, 255, 255, 0.507);
 }
+
 .topnav:hover {
     background-color: white;
 }
+
 .links a {
     font-size: 0.95rem;
     font-weight: 500;
@@ -31,13 +46,17 @@ nav {
     padding: 1rem 1rem 1rem 2rem;
     float: left;
     display: block;
+    text-decoration: none !important;
 }
+
 .links a:hover {
     color: #282828;
 }
+
 .links-social {
     display: inline-block;
 }
+
 .links-social a {
     font-size: 0.95rem;
     font-weight: 500;
@@ -48,20 +67,55 @@ nav {
     float: left;
     display: block;
 }
+
 .links-social a:hover {
     color: #282828;
 }
+
 .logo {
     width: 0.75rem;
     float: left;
     padding: 0.75rem 0 0.75rem 0rem;
 }
+
 .topnav .icon {
     display: none;
 }
+
 .links {
     float: right;
 }
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+
+
 /*-------------- Fin Menu--------------*/
 
 
@@ -75,6 +129,7 @@ nav {
     padding-bottom: 12%;
     box-sizing: border-box;
 }
+
 .block-news {
     display: inline-block;
     width: 100%;
@@ -86,6 +141,7 @@ nav {
     box-shadow: 0px 0px 20px #272626;
     position: relative;
 }
+
 .block-pic {
     width: 100%;
     height: 12rem;
@@ -95,23 +151,27 @@ nav {
     border-radius: 5px 5px 0 0;
     text-align: center;
 }
+
 .block-pic:hover {
     filter: grayscale(100%);
 }
+
 .news1 {
-    background-image: url(Imagenes/Happines\ begins.jpg);
+    background-image: url(Imagenes/happinesbegins.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: hard-light;
 }
+
 .news2 {
-    background-image: url(Imagenes/Joe&Sophie.jpg);
+    background-image: url(Imagenes/joeysophie.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: hard-light;
 }
+
 .news3 {
     background-image: url(Imagenes/News2.jpg);
     background-repeat: no-repeat;
@@ -119,13 +179,15 @@ nav {
     background-position: center;
     background-blend-mode: hard-light;
 }
+
 .news4 {
-    background-image: url(Imagenes/News4.jpg);
+    background-image: url(Imagenes/fondocarrousel.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: hard-light;
 }
+
 .news5 {
     background-image: url(Imagenes/papernick.jpg);
     background-repeat: no-repeat;
@@ -133,6 +195,7 @@ nav {
     background-position: center;
     background-blend-mode: hard-light;
 }
+
 .news6 {
     background-image: url(Imagenes/News6.jpg);
     background-repeat: no-repeat;
@@ -140,6 +203,7 @@ nav {
     background-position: center;
     background-blend-mode: hard-light;
 }
+
 .full {
     width: 100%;
     height: 27.5rem;
@@ -147,6 +211,7 @@ nav {
     border-radius: 5px;
     position: relative;
 }
+
 .block-titles {
     width: 100%;
     height: 5.5rem;
@@ -154,6 +219,7 @@ nav {
     float: left;
     padding: 8% 8% 0% 8%;
 }
+
 .block-text {
     width: 100%;
     height: 7rem;
@@ -162,9 +228,11 @@ nav {
     padding: 0 8% 2% 8%;
     overflow: scroll;
 }
+
 .block-text::-webkit-scrollbar {
     width: 0 !important
 }
+
 .block-link {
     width: 100%;
     height: 3rem;
@@ -172,6 +240,7 @@ nav {
     padding: 2% 8% 0% 8%;
     float: left;
 }
+
 .content {
     width: 100%;
     position: absolute;
@@ -179,12 +248,15 @@ nav {
     border-radius: 5px;
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.918), rgba(0, 0, 0, 0.918));
 }
+
 .white {
     color: white;
 }
+
 /*--------------- Fin News-----------------*/
 
-/*Text*/
+/*Texto en general*/
+
 h3 {
     font-family: 'Oswald', sans-serif;
     font-size: 100px;
@@ -195,6 +267,7 @@ h3 {
     margin-top: 2rem;
     letter-spacing: 5px;
 }
+
 h4 {
     font-family: 'Quicksand', sans-serif;
     font-size: 1.25rem;
@@ -205,6 +278,7 @@ h4 {
     position: relative;
     margin-bottom: 1rem;
 }
+
 h5 {
     font-family: 'News Cycle', sans-serif;
     font-size: 1.3rem;
@@ -212,9 +286,10 @@ h5 {
     line-height: 1.5rem;
     text-align: left;
     color: #282828;
-    white-space: nowrap;
+    white-space: pre-wrap;
     text-overflow: ellipsis;
 }
+
 h6 {
     font-family: 'News Cycle', sans-serif;
     font-size: 0.9rem;
@@ -222,10 +297,11 @@ h6 {
     line-height: 2rem;
     text-align: left;
     color: #777777;
-    white-space: nowrap;
+    white-space: pre-wrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .p-news {
     font-family: 'News Cycle', sans-serif;
     font-size: 1rem;
@@ -234,6 +310,7 @@ h6 {
     text-align: left;
 
 }
+
 .p-news .white {
     font-family: 'News Cycle', sans-serif;
     font-size: 1rem;
@@ -242,9 +319,178 @@ h6 {
     text-align: left;
     color: white;
 }
-/*------------------ Fin Text---------------*/
 
-/*--------------Buttons------------*/
+/*------------------ Fin Texto---------------*/
+
+/*-----------------------Albums------------------------*/
+
+
+.album-info {
+    position: relative;
+    float: left;
+    width: 100%;
+    overflow: hidden;
+}
+
+.album-info img {
+    -webkit-transition: 0.3s all ease;
+    -o-transition: 0.3s all ease;
+    transition: 0.3s all ease;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+}
+
+.album-info .member-info {
+    top: 50%;
+    text-align: center;
+    position: absolute;
+    padding: 20px;
+    -webkit-transform: translateY(-30%);
+    -ms-transform: translateY(-30%);
+    transform: translateY(-30%);
+    -webkit-transition: 0.5s all ease;
+    -o-transition: 0.5s all ease;
+    transition: 0.5s all ease;
+    opacity: 0;
+    visibility: hidden;
+    color: #fff;
+}
+
+.album-info:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #974cf8;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: 0.3s all ease;
+    -o-transition: 0.3s all ease;
+    transition: 0.3s all ease;
+}
+
+.album-info:hover:before,
+.album-info:focus:before,
+.album-info:active:before {
+    opacity: 0.8;
+    visibility: visible;
+}
+
+.album-info:hover img,
+.album-info:focus img,
+.album-info:active img {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.album-info:hover .member-info,
+.album-info:focus .member-info,
+.album-info:active .member-info {
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition-delay: 0.2s;
+    -o-transition-delay: 0.2s;
+    transition-delay: 0.2s;
+    opacity: 1;
+    visibility: visible;
+    z-index: 4;
+}
+
+.margen1 {
+    margin-left: 47px;
+}
+
+.margen2 {
+    margin-left: 35px;
+}
+
+.margen3 {
+    margin-left: 9px;
+}
+
+.margen4 {
+    margin-left: 15px;
+}
+
+.margen5 {
+    margin-left: 29px;
+}
+
+.margen6 {
+    margin-left: 28px;
+}
+
+.margen7 {
+    margin-left: 53px;
+}
+
+.margen8 {
+    margin-left: 49px;
+}
+
+.margen9 {
+    margin-left: 56px;
+}
+
+.margen10 {
+    margin-left: 61px;
+}
+
+.member-info .h3 {
+    text-transform: uppercase;
+}
+
+/* ---------------------Fin Albums----------------------*/
+
+/*------------------Botones---------------*/
+.tickets-button {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 0.75rem;
+    text-align: center;
+    color: #974cf8;
+    border-radius: 4px;
+    border: 0.05rem solid #974cf8;
+    padding: 0.7rem;
+    float: left;
+    text-decoration: none !important;
+}
+
+.tickets-button:hover {
+    color: #F6F6F6;
+    border-radius: 4px;
+    border: 0.05rem solid#974cf8;
+    background: #974cf8;
+}
+
+.soldout-button {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 0.75rem;
+    text-align: center;
+    color: #9d9d9c;
+    border-radius: 4px;
+    border: 0.05rem solid #9d9d9c;
+    padding: 0.7rem;
+    float: left;
+    text-decoration: none !important;
+}
+
+.soldout-button:hover {
+    color: #F6F6F6;
+    border-radius: 4px;
+    border: 0.05rem solid #9d9d9c;
+    background: #9d9d9c;
+}
+
 a {
     font-family: 'Quicksand', sans-serif;
     font-size: 1rem;
@@ -252,27 +498,33 @@ a {
     text-decoration: none;
     color: #282828;
 }
+
 a:hover {
     color: #974cf8;
 }
+
 .hashtag {
     font-family: 'Quicksand', sans-serif;
     font-size: 0.85rem;
     font-weight: 400;
-    text-decoration: none;
+    text-decoration: none !important;
     color: #974cf8;
 }
+
 .hashtag:hover {
     color: #282828;
 }
+
 .fa-plus {
     margin-top: 0.15rem;
     color: #974cf8;
     float: right;
 }
+
 .fa-plus:hover {
     color: #282828;
 }
+
 .right-button {
     font-family: 'Quicksand', sans-serif;
     font-weight: 400;
@@ -286,34 +538,158 @@ a:hover {
     float: right;
     text-decoration: none !important;
 }
+
 .right-button:hover {
     color: #F6F6F6;
     border-radius: 4px;
     border: 0.05rem solid #974cf8;
     background: #974cf8;
 }
-/*-----------------------Albums------------------------*/
-.img-discos {
-    width: 350px;
 
-}
-.img-discos:hover {
-    transform: scale(1.1);
-    transition: .5s ease;
-    backface-visibility: hidden;
-    opacity: 0.3;
-}
-.discografia:hover .image {
-  opacity: 0.3;
+/*------------------Fin Botones---------------*/
+
+/*------------------Tour---------------*/
+#tour {
+    width: 100%;
+    height: auto;
+    position: relative;
+    margin: 0 auto;
+    padding-bottom: 12%;
 }
 
-.discografia:hover .middle {
-  opacity: 1;
+.block-tour {
+    display: inline-block;
+    width: 100%;
+    min-height: auto;
+    box-sizing: border-box;
+    background: #FFFFFF;
+    color: #282828;
+    border-radius: 5px;
+    padding: 8% 5% 8% 5%;
+    box-shadow: 0px 0px 20px #272626;
 }
-/* ---------------------Fin Albums----------------------*/
+
+.block-date {
+    width: 30%;
+    height: 100%;
+    float: left;
+    font-family: 'News Cycle', sans-serif;
+    font-weight: 700;
+}
+
+.day {
+    height: 45%;
+    font-size: 5em;
+    line-height: 3.5rem;
+    margin-bottom: 10%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+}
+
+.month-year {
+    height: 50%;
+    font-size: 2.25rem;
+    line-height: 2.25rem;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.block-location {
+    width: 62%;
+    height: 100%;
+    margin-left: 8%;
+    float: right;
+    font-family: 'News Cycle', sans-serif;
+}
+
+.city {
+    font-size: 1.9rem;
+    line-height: 1.9rem;
+    font-weight: 700;
+}
+
+.stadium {
+    font-size: 1.25rem;
+    line-height: 2.5rem;
+    font-weight: 400;
+}
+
+.block-tickets {
+    width: 62%;
+    height: 25%;
+    margin: 5% 0 0 8%;
+    float: right;
+}
+
+/*------------------Fin Tour---------------*/
+
+/*footer*/
+
+footer {
+    height: 7rem;
+    background: #777777;
+    padding-top: 1rem;
+    position: relative;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 2.5rem;
+    color: #FFFFFF;
+}
+
+.social-footer {
+    text-align: center;
+}
+
+.social-footer a {
+    color: white;
+    font-size: 2rem;
+    margin: 1rem;
+}
+
+.social-footer a:hover {
+    color: #7028cf;
+}
+
+/* Row + Col */
+
+.row {
+    clear: both;
+    padding: 0px;
+    margin: 0px;
+}
+
+.row-separation {
+    position: relative;
+    width: 100%;
+    height: 2rem;
+}
+
+.group:before,
+.group:after {
+    content: "";
+    display: table;
+}
+
+.group:after {
+    clear: both;
+}
+
+.col {
+    display: block;
+    float: left;
+    margin: 4% 0% 0% 4%;
+}
+
 .col:first-child {
     margin-left: 0;
 }
+
 section:before {
     content: url('../img/divider.svg');
     position: absolute;
@@ -323,26 +699,65 @@ section:before {
     background-position: bottom;
     background-size: cover;
 }
-.hero-area,.hero-slides{
-    position: relative;
-    z-index: 1
+
+form .form-control {
+    border: 1px solid #7028cf;
 }
-#albums{
-    width: 100%;
-    height: auto;
+
+form .btn {
     position: relative;
-    margin: 0 auto;
-    padding-bottom: 12%;
+    background-color: #FFF;
+    border-color: #7028cf;
+    border-radius: 0;
+    color: #7028cf;
+    transition: 0.5s;
+    font-weight: 700;
+}
+
+form .btn:hover {
+    background-color: #7028cf;
+    color: #FFF;
+}
+
+form .disclaimer {
+    color: #FFF;
+    font-size: 0.7rem;
+    text-align: justify;
+}
+
+.section .section-title h2:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 25%;
+    right: 25%;
+    width: 50%;
+    height: 3px;
+    background: #7028cf;
+}
+
+*,
+::after,
+::before {
     box-sizing: border-box;
 }
-.single-hero-slide {
-    width: 100%;
-    height: 950px;
-    position: relative;
-    z-index: 1;
-    padding: 0 30px;
-    overflow: hidden
+
+
+
+/*Media Queries*/
+@media only screen and (max-width: 480px) {
+    .container {
+        width: 100%;
+    }
+
 }
+
+@media only screen and (max-width: 480px) {
+    .p-news {
+        display: none;
+    }
+}
+
 @media only screen and (min-width: 992px) and (max-width:1199px) {
     .single-hero-slide {
         height: 700px
@@ -360,38 +775,9 @@ section:before {
         height: 500px
     }
 }
-.single-hero-slide::after {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -5;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, .35);
-    content: ''
-}
-.single-hero-slide .slide-img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -10;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-}
-.single-hero-slide .hero-slides-content {
-    display: inline-block;
-    width: 100%
-}
-.single-hero-slide .hero-slides-content h6 {
-    font-size: 18px;
-    color: #fff;
-    letter-spacing: 20px;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    display: block
-}
+
+
+
 @media only screen and (max-width: 767px) {
     .single-hero-slide .hero-slides-content h6 {
         letter-spacing: 5px
@@ -410,6 +796,7 @@ section:before {
     letter-spacing: 30px;
     overflow: hidden
 }
+
 .single-hero-slide .hero-slides-content h2 span {
     position: absolute;
     top: 0;
@@ -420,28 +807,33 @@ section:before {
     -webkit-animation: textsonar 6s linear infinite;
     animation: textsonar 6s linear infinite
 }
+
 @media only screen and (min-width: 768px) and (max-width:991px) {
     .single-hero-slide .hero-slides-content h2 {
         letter-spacing: 15px;
         font-size: 42px
     }
 }
+
 @media only screen and (max-width: 767px) {
     .single-hero-slide .hero-slides-content h2 {
         letter-spacing: 5px;
         font-size: 30px
     }
 }
+
 .single-hero-slide .hero-slides-content .btn {
     border: 1px solid #fff;
     background-color: transparent;
     color: #fff
 }
+
 .single-hero-slide .hero-slides-content .btn:hover,
 .single-hero-slide .hero-slides-content .btn:focus {
     background-color: #fff;
     color: #000
 }
+
 @-webkit-keyframes textsonar {
     0% {
         -webkit-transform: scaleX(1);
@@ -458,6 +850,7 @@ section:before {
         transform: scaleX(1)
     }
 }
+
 @keyframes textsonar {
     0% {
         -webkit-transform: scaleX(1);
@@ -474,10 +867,12 @@ section:before {
         transform: scaleX(1)
     }
 }
+
 .single-hero-slide .slide-img {
     -webkit-animation: slide 12s linear infinite;
     animation: slide 12s linear infinite
 }
+
 @-webkit-keyframes slide {
     0% {
         -webkit-transform: scale(1);
@@ -494,6 +889,7 @@ section:before {
         transform: scale(1)
     }
 }
+
 @keyframes slide {
     0% {
         -webkit-transform: scale(1);
@@ -510,123 +906,24 @@ section:before {
         transform: scale(1)
     }
 }
-.tickets-button {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 400;
-    font-size: 0.75rem;
-    text-align: center;
-    color: #974cf8;
-    border-radius: 4px;
-    border: 0.05rem solid #974cf8;
-    padding: 0.7rem;
-    float: left;
-    text-decoration: none !important;
-}
-.tickets-button:hover {
-    color: #F6F6F6;
-    border-radius: 4px;
-    border: 0.05rem solid#974cf8;
-    background: #974cf8;
-}
-.soldout-button {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 400;
-    font-size: 0.75rem;
-    text-align: center;
-    color: #9d9d9c;
-    border-radius: 4px;
-    border: 0.05rem solid #9d9d9c;
-    padding: 0.7rem;
-    float: left;
-    text-decoration: none !important;
-}
-.soldout-button:hover {
-    color: #F6F6F6;
-    border-radius: 4px;
-    border: 0.05rem solid #9d9d9c;
-    background: #9d9d9c;
-}
-#tour {
-    width: 100%;
-    height: auto;
-    position: relative;
-    margin: 0 auto;
-    padding-bottom: 12%;
-}
-.block-tour {
-    display: inline-block;
-    width: 100%;
-    min-height: auto;
-    box-sizing: border-box;
-    background: #FFFFFF;
-    color: #282828;
-    border-radius: 5px;
-    padding: 8% 5% 8% 5%;
-    box-shadow: 0px 0px 20px #272626;
-}
-.block-date {
-    width: 30%;
-    height: 100%;
-    float: left;
-    font-family: 'News Cycle', sans-serif;
-    font-weight: 700;
-}
-.day {
-    height: 45%;
-    font-size: 5em;
-    line-height: 3.5rem;
-    margin-bottom: 10%;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.month-year {
-    height: 50%;
-    font-size: 2.25rem;
-    line-height: 2.25rem;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-.block-location {
-    width: 62%;
-    height: 100%;
-    margin-left: 8%;
-    float: right;
-    font-family: 'News Cycle', sans-serif;
-}
-.city {
-    font-size: 1.9rem;
-    line-height: 1.9rem;
-    font-weight: 700;
-}
-.stadium {
-    font-size: 1.25rem;
-    line-height: 2.5rem;
-    font-weight: 400;
-}
-.block-tickets {
-    width: 62%;
-    height: 25%;
-    margin: 5% 0 0 8%;
-    float: right;
+
+
+@media screen and (max-width:768px) {
+
+    .tour,
+    .block-date {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .tour {
+        width: 100%;
+    }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width:768px) {
+    .block-location {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
